--- a/CountdownPresets/res/values/strings.xml
+++ b/CountdownPresets/res/values/strings.xml
@@ -6,11 +6,15 @@
     <string name="action_settings">Settings</string>
     <string name="but_add_timer_preset">Add preset timer</string>
     <string name="action_edit_preset">Edit</string>
-     <string name="action_delete_preset">Delete</string>
-     <string name="lbl_preset_title">Title</string>
-     <string name="lbl_preset_time">Time(minutes)</string>
-     <string name="but_timer_preset_add">Add</string>
-     <string name="but_timer_preset_edit">Edit</string>
-     <string name="txt_timer_preset_hint">Optional</string>   
+    <string name="action_delete_preset">Delete</string>
+    <string name="lbl_preset_title">Title</string>
+    <string name="lbl_preset_time">Time(minutes)</string>
+    <string name="but_timer_preset_add">Add</string>
+    <string name="but_timer_preset_edit">Edit</string>
+    <string name="txt_timer_preset_hint">Optional</string>
+    <string name="title_activity_countdown">CountdownActivity</string>
+    <string name="but_stop_timer">Stop</string>
+    <string name="but_cancel_timer">Cancel</string>
+    <string name="but_restart_timer">Restart</string>
 
 </resources>
