--- a/CountdownPresets/res/values/strings.xml
+++ b/CountdownPresets/res/values/strings.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Countdown presets</string>
+    <string name="app_name">Countdown timer presets</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="action_menu_about">About</string>
     <string name="but_add_timer_preset">Add preset timer</string>
     <string name="action_edit_preset">Edit</string>
     <string name="action_delete_preset">Delete</string>
@@ -16,7 +17,7 @@
     <string name="but_stop_timer">Stop alarm</string>
     <string name="but_cancel_timer">Cancel</string>
     <string name="but_restart_timer">Restart timer</string>
-   
-  
-</resources>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="but_close_dialog">Close</string>
 
+</resources>
